# CodeEditorCpp

./: .gitignore  README.md  foo.txt
Core/: CMakeLists.txt  README.md  ToDo  file.txt  foo.txt  main.cpp
Core/Headers/: TDataCom.h  TDataValue.h  TText.h  TTextLink.h
Core/Project1/: CMakeLists.txt  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters
Core/Project1/Headers/: TDataCom.h  TStack.h  TText.h  TTextLink.h
Core/Project1/Source/: TText.cpp  TTextLink.cpp
Core/Source/: TText.cpp  TTextLink.cpp
